# ikuyodesu

./: CMakeLists.txt
resources/: config.ini
src/: camera.hpp  ikuyodesu.cpp  ikuyodesu.h  main.cpp  mat.hpp  tilemap.hpp
src/alg/: iso.hpp  mat.hpp  vec.hpp
src/entity/: entity.cpp  entity.h  holder.h  player.cpp  player.h
src/scene/: base.hpp  scenemanager.cpp  scenemanager.h
src/utils/: config.cpp  config.h  logger.h
