CMAKE_MINIMUM_REQUIRED(VERSION 4.0.3)
SET(CMAKE_CXX_COMPILER g++)
PROJECT(ikuyodesu VERSION 0.1.0 LANGUAGES C CXX)
SET(CMAKE_CXX_STANDARD 23)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(SDL3 REQUIRED sdl3)
PKG_CHECK_MODULES(SDL3_image REQUIRED sdl3-image)
PKG_CHECK_MODULES(SDL3_ttf REQUIRED sdl3-ttf)

AUX_SOURCE_DIRECTORY(src IKUYODESU_SOURCE_FILES)
ADD_EXECUTABLE(ikuyodesu ${IKUYODESU_SOURCE_FILES})

TARGET_LINK_LIBRARIES(ikuyodesu SDL3 SDL3_image SDL3_ttf)